# VulkanTensor

./: .gitignore  CMakeLists.txt  LICENSE.txt
TensorLib/: CMakeLists.txt
TensorLib/include/tensorlib/: Device.h  Tensor.h
TensorLib/src/: Device.cpp
TensorLib/src/backend/cpu/: CPUDevice.cpp  CPUDevice.h
Tests/: CMakeLists.txt
Tests/src/: main.cpp
